--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 	<!-- Favicon Icon -->
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	<!-- Google Fonts Css-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,7 +66,11 @@
                         </div>
                         <!-- Header Btn Start -->
                         <div class="header-btn d-inline-flex">
-                            <a href="contact.html" class="btn-default">get in touch</a>
+                            <div class="header-btn d-inline-flex">
+                            <a href="tel:+919209545784" class="btn-default">
+                                <i class="fa fa-phone"></i> Talk to an Expert
+                            </a>
+                            </div>
                         </div>
                         <!-- Header Btn End -->
 					</div>
@@ -77,6 +82,47 @@
 		</div>
 	</header>
 	<!-- Header End -->
+
+
+    <a href="https://wa.me/919209545784" 
+   class="whatsapp-float" 
+   target="_blank" 
+   aria-label="Chat on WhatsApp">
+  <i class="fa fa-comment"></i>
+</a>
+
+    <style>
+.whatsapp-float {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  width: 55px;
+  height: 55px;
+  background-color: #25D366;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 30px;
+  line-height: 55px;
+  z-index: 9999;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.1);
+  color: #fff;
+}
+
+/* Mobile Adjustment */
+@media (max-width: 768px) {
+  .whatsapp-float {
+    bottom: 20px;
+    right: 20px;
+  }
+}
+</style>
+
 
   <!-- Hero Section Start -->
 	<!-- background: url(''); -->
