--- a/about.html
+++ b/about.html
@@ -72,8 +72,10 @@
                     </div>
                     <!-- Header Btn Start -->
                     <div class="header-btn d-inline-flex">
-                        <a href="contact.html" class="btn-default">get in touch</a>
-                    </div>
+                         <a href="tel:+919209545784" class="btn-default">
+                            <i class="fa fa-phone"></i> Talk to an Expert
+                        </a>
+                     </div>
                     <!-- Header Btn End -->
                 </div>
                 <!-- Main Menu End -->
@@ -84,6 +86,45 @@
     </div>
 </header>
 <!-- Header End -->
+
+ <a href="https://wa.me/919209545784" 
+   class="whatsapp-float" 
+   target="_blank" 
+   aria-label="Chat on WhatsApp">
+  <i class="fa fa-comment"></i>
+</a>
+
+    <style>
+.whatsapp-float {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  width: 55px;
+  height: 55px;
+  background-color: #25D366;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 30px;
+  line-height: 55px;
+  z-index: 9999;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.1);
+  color: #fff;
+}
+
+/* Mobile Adjustment */
+@media (max-width: 768px) {
+  .whatsapp-float {
+    bottom: 20px;
+    right: 20px;
+  }
+}
+</style>
 
     <!-- Page Header Start -->
 	<div class="page-header parallaxie" style="background: url('images/about.jpg');">
