--- a/projects.html
+++ b/projects.html
@@ -69,9 +69,11 @@
                         </ul>
                     </div>
                     <!-- Header Btn Start -->
-                    <div class="header-btn d-inline-flex">  
-                        <a href="contact.html" class="btn-default">get in touch</a>
-                    </div>
+                    <div class="header-btn d-inline-flex">
+                         <a href="tel:+919209545784" class="btn-default">
+                            <i class="fa fa-phone"></i> Talk to an Expert
+                        </a>
+                     </div>
                     <!-- Header Btn End -->
                 </div>
                 <!-- Main Menu End -->
@@ -82,6 +84,45 @@
     </div>
 </header>
 <!-- Header End -->
+
+ <a href="https://wa.me/919209545784" 
+   class="whatsapp-float" 
+   target="_blank" 
+   aria-label="Chat on WhatsApp">
+  <i class="fa fa-comment"></i>
+</a>
+
+    <style>
+.whatsapp-float {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+  width: 55px;
+  height: 55px;
+  background-color: #25D366;
+  color: #fff;
+  border-radius: 50%;
+  text-align: center;
+  font-size: 30px;
+  line-height: 55px;
+  z-index: 9999;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease;
+}
+
+.whatsapp-float:hover {
+  transform: scale(1.1);
+  color: #fff;
+}
+
+/* Mobile Adjustment */
+@media (max-width: 768px) {
+  .whatsapp-float {
+    bottom: 20px;
+    right: 20px;
+  }
+}
+</style>
 
     <!-- Page Header Start -->
 	<div class="page-header parallaxie" style="background: url('images/project.jpg');">
@@ -297,38 +338,38 @@
 </footer>
 <!-- Footer End -->
 
-    <!-- Jquery Library File -->
+<!-- Jquery Library File -->
     <script src="js/jquery-3.7.1.min.js"></script>
-    <!-- Bootstrap js file -->
+<!-- Bootstrap js file -->
     <script src="js/bootstrap.min.js"></script>
-    <!-- Validator js file -->
+<!-- Validator js file -->
     <script src="js/validator.min.js"></script>
-    <!-- SlickNav js file -->
+<!-- SlickNav js file -->
     <script src="js/jquery.slicknav.js"></script>
-    <!-- Swiper js file -->
+<!-- Swiper js file -->
     <script src="js/swiper-bundle.min.js"></script>
-    <!-- Counter js file -->
+<!-- Counter js file -->
     <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/jquery.counterup.min.js"></script>
-    <!-- Isotop js file -->
+ <!-- Isotop js file -->
 	<script src="js/isotope.min.js"></script>
-    <!-- Magnific js file -->
+<!-- Magnific js file -->
     <script src="js/jquery.magnific-popup.min.js"></script>
-    <!-- SmoothScroll -->
+<!-- SmoothScroll -->
     <script src="js/SmoothScroll.js"></script>
-    <!-- Parallax js -->
+<!-- Parallax js -->
     <script src="js/parallaxie.js"></script>
-    <!-- MagicCursor js file -->
+<!-- MagicCursor js file -->
     <script src="js/gsap.min.js"></script>
     <script src="js/magiccursor.js"></script>
-    <!-- Text Effect js file -->
+<!-- Text Effect js file -->
     <script src="js/SplitText.js"></script>
     <script src="js/ScrollTrigger.min.js"></script>
-    <!-- YTPlayer js File -->
+<!-- YTPlayer js File -->
     <script src="js/jquery.mb.YTPlayer.min.js"></script>
-    <!-- Wow js file -->
+<!-- Wow js file -->
     <script src="js/wow.min.js"></script>
-    <!-- Main Custom js file -->
+<!-- Main Custom js file -->
     <script src="js/function.js"></script>
 </body>
 </html>
