--- a/services.html
+++ b/services.html
@@ -307,10 +307,12 @@
 <!-- Footer Start -->
 <footer class="main-footer text-center" style="color: white; padding: 20px 0;">
     <div class="container">
-        <p><strong>Contact Us:</strong>+91 92095 45784 | <strong>Email:</strong> darpan@avsi.in</p>
-         <p>
+        <p><strong>Contact Us:</strong>+91 95116 09437 | +91 87933 60854 <br>  <strong>Email:</strong> info@avsi.in</p>
+        
+        <p style="gap: 20px;">
             <strong>Follow Us On</strong> <br> 
             <a href="https://www.linkedin.com/in/darpan-gosavi-15b185173?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" class="social-icon" style="font-size: 1.5rem; color: #0A66C2;"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/share/1DHVF4u8Qt/?mibextid=wwXIfr" class="social-icon" style="font-size: 1.5rem; color: #0A66C2;"><i class="fa-brands fa-facebook"></i></a>
         </p>
         <p>© 2025 AVSI Interior And Decor All Rights Reserved.</p>
     </div>
